Added tabbing to EF Grouping. Fixed a few bugs.

--- a/app/templates/eventFrameGroups/addActiveEventFrames.html
+++ b/app/templates/eventFrameGroups/addActiveEventFrames.html
@@ -1,87 +1,85 @@
 {% extends "base.html" %}
 
-{% block title %}
-Event Frame Group Add Active Event Frames
-{% endblock %}
+{% block title %}Event Frame Group Add Active Event Frames{% endblock %}
 
 {% block page_content %}
-<div>
-    <ol class = "breadcrumb">
-        <li><a href = '{{ url_for("eventFrameGroups.listEventFrameGroups") }}'><span class = "glyphicon glyphicon-home"></span></a></li>
-        <li><a href = '{{ url_for("eventFrameGroups.dashboard", eventFrameGroupId = eventFrameGroup.EventFrameGroupId) }}'>{{ eventFrameGroup.Name }}            
-            </a></li>
-    </ol>
-</div>
-<div class = "page-header">
-    <h1>Event Frame Group <small>{{ eventFrameGroup.Name }}</small></h1>
-</div>
-<div class = "page-header">
-    <h1>
-        <small>Selected Active Event Frames</small>
-        <button class = "btn btn-default" id = "buttonSave" title = "Save"><span class = "glyphicon glyphicon-floppy-disk"></span></button>
-    </h1>
-</div>
-<div>
-    <table id = "selectedActiveEventFramesTable" class = "table table-hover" style = "display: none">
-        <thead>
-            <tr>
-                <th>Enterprise</th>
-                <th>Site</th>
-                <th>Element Template</th>
-                <th>Event Frame Template</th>
-                <th>Element</th>
-                <th>Name</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for eventFrame in eventFrames %}
-                <tr data-eventFrameId = "{{ eventFrame.EventFrameId }}" style = "display: none">
-                    <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Site.Enterprise.Name }}</td>
-                    <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Site.Name }}</td>
-                    <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Name }}</td>
-                    <td>{{ eventFrame.EventFrameTemplate.Name }}</td>
-                    <td>{{ eventFrame.Element.Name }}</td>
-                    <td>{{ eventFrame.Name }}</td>
-                    <td><button class = "btn btn-default" id = "buttonRemove {{ loop.index }}" title = "Remove"><span class = "glyphicon glyphicon-minus">                            
-                        </span></button></td>
+    <div>
+        <ol class = "breadcrumb">
+            <li><a href = '{{ url_for("eventFrameGroups.listEventFrameGroups") }}'><span class = "glyphicon glyphicon-home"></span></a></li>
+            <li><a href = '{{ url_for("eventFrameGroups.dashboard", eventFrameGroupId = eventFrameGroup.EventFrameGroupId) }}'>{{ eventFrameGroup.Name }}
+                </a></li>
+        </ol>
+    </div>
+    <div class = "page-header">
+        <h1>Event Frame Group <small>{{ eventFrameGroup.Name }}</small></h1>
+    </div>
+    <div class = "page-header">
+        <h1>
+            <small>Selected Active Event Frames</small>
+            <button class = "btn btn-default" id = "buttonSave" title = "Save"><span class = "glyphicon glyphicon-floppy-disk"></span></button>
+        </h1>
+    </div>
+    <div>
+        <table id = "selectedActiveEventFramesTable" class = "table table-hover" style = "display: none">
+            <thead>
+                <tr>
+                    <th>Enterprise</th>
+                    <th>Site</th>
+                    <th>Element Template</th>
+                    <th>Event Frame Template</th>
+                    <th>Element</th>
+                    <th>Name</th>
+                    <th></th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
-<div class = "page-header">
-    <h1><small>Available Active Event Frames</small></h1>
-</div>
-<div>
-    <table id = "availableActiveEventFramesTable" class = "table table-hover" style = "display:none">
-        <thead>
-            <tr>                
-                <th>Enterprise</th>
-                <th>Site</th>
-                <th>Element Template</th>
-                <th>Event Frame Template</th>
-                <th>Element</th>
-                <th>Name</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for eventFrame in eventFrames %}
-                <tr data-eventFrameId = "{{ eventFrame.EventFrameId }}">
-                    <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Site.Enterprise.Name }}</td>
-                    <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Site.Name }}</td>
-                    <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Name }}</td>
-                    <td>{{ eventFrame.EventFrameTemplate.Name }}</td>
-                    <td>{{ eventFrame.Element.Name }}</td>
-                    <td>{{ eventFrame.Name }}</td>
-                    <td><button class = "btn btn-default" id = "buttonAdd {{ loop.index }}" title = "Add"><span class = "glyphicon glyphicon-plus"></span>
-                        </button></td>
+            </thead>
+            <tbody>
+                {% for eventFrame in eventFrames %}
+                    <tr data-eventFrameId = "{{ eventFrame.EventFrameId }}" style = "display: none">
+                        <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Site.Enterprise.Name }}</td>
+                        <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Site.Name }}</td>
+                        <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Name }}</td>
+                        <td>{{ eventFrame.EventFrameTemplate.Name }}</td>
+                        <td>{{ eventFrame.Element.Name }}</td>
+                        <td>{{ eventFrame.Name }}</td>
+                        <td><button class = "btn btn-default" id = "buttonRemove {{ loop.index }}" title = "Remove"><span class = "glyphicon glyphicon-minus">
+                            </span></button></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <div class = "page-header">
+        <h1><small>Available Active Event Frames</small></h1>
+    </div>
+    <div>
+        <table id = "availableActiveEventFramesTable" class = "table table-hover" style = "display:none">
+            <thead>
+                <tr>                
+                    <th>Enterprise</th>
+                    <th>Site</th>
+                    <th>Element Template</th>
+                    <th>Event Frame Template</th>
+                    <th>Element</th>
+                    <th>Name</th>
+                    <th></th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+            </thead>
+            <tbody>
+                {% for eventFrame in eventFrames %}
+                    <tr data-eventFrameId = "{{ eventFrame.EventFrameId }}">
+                        <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Site.Enterprise.Name }}</td>
+                        <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Site.Name }}</td>
+                        <td>{{ eventFrame.EventFrameTemplate.ElementTemplate.Name }}</td>
+                        <td>{{ eventFrame.EventFrameTemplate.Name }}</td>
+                        <td>{{ eventFrame.Element.Name }}</td>
+                        <td>{{ eventFrame.Name }}</td>
+                        <td><button class = "btn btn-default" id = "buttonAdd {{ loop.index }}" title = "Add"><span class = "glyphicon glyphicon-plus"></span>
+                            </button></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
 
 {% block scripts %}
@@ -89,6 +87,37 @@ Event Frame Group Add Active Event Frames
     <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/>
     <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/styles.css") }}/>
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
+    {% block setTabIndex %}
+        <script>
+            function setTabIndex()
+            {
+                var tabIndex = 1
+                $('ol.breadcrumb a[title="Next"],[id^=inputOrSelectNewValue]').each(function()
+                {
+                    $(this).attr("tabindex", tabIndex)
+                    tabIndex = tabIndex + 1
+                })
+
+                $('#availableNewEventFramesTable button[title="Add"]').each(function ()
+                {
+                    $(this).attr("tabindex", tabIndex)
+                    tabIndex = tabIndex + 1
+                })
+
+                $("#buttonSave").attr("tabindex", tabIndex)
+                tabIndex = tabIndex + 1
+                $('ol.breadcrumb a[title="Previous"]').attr("tabindex", tabIndex)
+                tabIndex = tabIndex + 1
+                $($("ol.breadcrumb > li:not(.active) > a").get().reverse()).each(function()       
+                {
+                    $(this).attr("tabindex", tabIndex)
+                    tabIndex = tabIndex + 1
+                })
+                
+                $('ol.breadcrumb a[title="Next"]').focus()
+            }
+        </script>
+    {% endblock %}
     <script>
         $(document).ready(function()
         {
@@ -195,7 +224,16 @@ Event Frame Group Add Active Event Frames
 
             // Clear any left over filtering from state saving.
             selectedActiveEventFramesTable.search("").columns().search("").draw()
+            selectedNewEventFramesTable.on("draw.dt", function()
+            {
+                setTabIndex()
+            })
             availableActiveEventFramesTable.search("").columns().search("").draw()
+            availableNewEventFramesTable.on("draw.dt", function()
+            {
+                setTabIndex()
+            })
+            setTabIndex()
         })
     </script>
 {% endblock %}
